[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/coin_explote_5.png" type="Texture" id=1]
[ext_resource path="res://assets/images/coin_explote_3.png" type="Texture" id=2]
[ext_resource path="res://assets/images/coin_explote_4.png" type="Texture" id=3]
[ext_resource path="res://assets/images/coin_explote_2.png" type="Texture" id=4]
[ext_resource path="res://assets/images/coin_explote_1.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/font_pc_text.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/Coin.gd" type="Script" id=7]
[ext_resource path="res://assets/images/coin_2.png" type="Texture" id=8]
[ext_resource path="res://assets/images/coin_3.png" type="Texture" id=9]
[ext_resource path="res://assets/images/coin_4.png" type="Texture" id=10]
[ext_resource path="res://assets/images/coin_1.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 4.3826

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": false,
"name": "toked",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 6 )

[node name="Coin" type="Area2D"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.579552, 0.210224 )
frames = SubResource( 2 )
animation = "idle"

[node name="Points" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -9.51653
margin_top = -9.77795
margin_right = 10.4835
margin_bottom = -1.77795
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.92549, 0.933333, 0.156863, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeToGo" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="TimerOut" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="timeout" from="TimeToGo" to="." method="_on_TimeToGo_timeout"]
[connection signal="timeout" from="TimerOut" to="." method="_on_TimerOut_timeout"]
